// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Endevor responses type parsing Endevor API v1 response type parsing should parse a response with version header 1`] = `
Object {
  "headers": Object {
    "api-version": "1.1",
  },
}
`;

exports[`Endevor responses type parsing Endevor API v1 response type parsing should throw an error for a response with incorrect version header 1`] = `"Invalid value 1.1 supplied to : { headers: { api-version: string } }/headers: { api-version: string }/api-version: string"`;

exports[`Endevor responses type parsing Endevor API v1 response type parsing should throw an error for a response without version header 1`] = `"Invalid value undefined supplied to : { headers: { api-version: string } }/headers: { api-version: string }/api-version: string"`;

exports[`Endevor responses type parsing Endevor API v2 response type parsing should parse a response with version header 1`] = `
Object {
  "headers": Object {
    "version": "2.5",
  },
}
`;

exports[`Endevor responses type parsing Endevor API v2 response type parsing should throw an error for a response with incorrect version header 1`] = `"Invalid value 2.5 supplied to : { headers: { version: string } }/headers: { version: string }/version: string"`;

exports[`Endevor responses type parsing Endevor API v2 response type parsing should throw an error for a response without version header 1`] = `"Invalid value undefined supplied to : { headers: { version: string } }/headers: { version: string }/version: string"`;

exports[`Endevor responses type parsing Endevor base response type parsing should parse a response with correct return code 1`] = `
Object {
  "body": Object {
    "returnCode": 42,
    "statusCode": 200,
  },
}
`;

exports[`Endevor responses type parsing Endevor base response type parsing should throw an error for a response with incorrect return code 1`] = `"Invalid value \\"8\\" supplied to : { body: { statusCode: number, returnCode: ReturnCode } }/body: { statusCode: number, returnCode: ReturnCode }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor base response type parsing should throw an error for a response with nullable return code 1`] = `"Invalid value null supplied to : { body: { statusCode: number, returnCode: ReturnCode } }/body: { statusCode: number, returnCode: ReturnCode }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor base response type parsing should throw an error for a response with nullable status code 1`] = `"Invalid value null supplied to : { body: { statusCode: number, returnCode: ReturnCode } }/body: { statusCode: number, returnCode: ReturnCode }/statusCode: number"`;

exports[`Endevor responses type parsing Endevor base response type parsing should throw an error for a response without return code 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode } }/body: { statusCode: number, returnCode: ReturnCode }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor base response type parsing should throw an error for a response without status code 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode } }/body: { statusCode: number, returnCode: ReturnCode }/statusCode: number"`;

exports[`Endevor responses type parsing Endevor configurations response type parsing should parse a response with any data and correct return code 1`] = `
Object {
  "body": Object {
    "data": Array [
      Object {
        "some_name": "blah",
      },
      Object {
        "some_different_name": "blah",
      },
      Object {
        "name": "real_name",
      },
    ],
    "returnCode": 8,
  },
}
`;

exports[`Endevor responses type parsing Endevor configurations response type parsing should throw an error for a response with incorrect return code 1`] = `"Invalid value \\"8\\" supplied to : { body: { returnCode: ReturnCode, data: Array<unknown> } }/body: { returnCode: ReturnCode, data: Array<unknown> }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor configurations response type parsing should throw an error for a response with only return code 1`] = `"Invalid value undefined supplied to : { body: { returnCode: ReturnCode, data: Array<unknown> } }/body: { returnCode: ReturnCode, data: Array<unknown> }/data: Array<unknown>"`;

exports[`Endevor responses type parsing Endevor configurations response type parsing should throw an error for a response without return code 1`] = `"Invalid value undefined supplied to : { body: { returnCode: ReturnCode, data: Array<unknown> } }/body: { returnCode: ReturnCode, data: Array<unknown> }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor element dependencies response type parsing should parse a response with any dependencies 1`] = `
Object {
  "body": Object {
    "data": Array [
      Object {
        "components": Array [
          undefined,
          Object {
            "is_it_dependency": "noooooo",
          },
        ],
      },
    ],
    "returnCode": 0,
    "statusCode": 200,
  },
}
`;

exports[`Endevor responses type parsing Endevor element dependencies response type parsing should throw an error for a response without data 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, data: Array<{ components: (Array<unknown> | undefined) }> } }/body: { statusCode: number, returnCode: ReturnCode, data: Array<{ components: (Array<unknown> | undefined) }> }/data: Array<{ components: (Array<unknown> | undefined) }>"`;

exports[`Endevor responses type parsing Endevor elements response type parsing should parse a response with any elements 1`] = `
Object {
  "body": Object {
    "data": Array [
      Object {
        "whaaat": "whaaaat???",
      },
      Object {
        "whatttttt": "whattttt??",
      },
    ],
    "statusCode": 200,
  },
}
`;

exports[`Endevor responses type parsing Endevor elements response type parsing should throw an error for a response without data 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, data: Array<unknown> } }/body: { statusCode: number, data: Array<unknown> }/data: Array<unknown>"`;

exports[`Endevor responses type parsing Endevor environment stages response type parsing should parse a response with any data 1`] = `
Object {
  "body": Object {
    "data": Array [
      Object {
        "some_name": "blah",
      },
      Object {
        "some_different_name": "blah",
      },
      Object {
        "name": "real_name",
      },
    ],
    "statusCode": 200,
  },
}
`;

exports[`Endevor responses type parsing Endevor environment stages response type parsing should throw an error for a response without environment stages 1`] = `"Invalid value null supplied to : { body: { statusCode: number, data: Array<unknown> } }/body: { statusCode: number, data: Array<unknown> }/data: Array<unknown>"`;

exports[`Endevor responses type parsing Endevor error response type parsing should parse a proper response 1`] = `
Object {
  "body": Object {
    "messages": Array [
      "Oops, I did it again!",
    ],
    "returnCode": 8,
    "statusCode": 400,
  },
}
`;

exports[`Endevor responses type parsing Endevor error response type parsing should throw an error for a response with incorrect messages 1`] = `"Invalid value {\\"value\\":\\"Oops, I did it again!\\"} supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/messages: Array<string>/0: string"`;

exports[`Endevor responses type parsing Endevor error response type parsing should throw an error for a response with incorrect return code 1`] = `"Invalid value \\"8\\" supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor error response type parsing should throw an error for a response with incorrect status code 1`] = `"Invalid value \\"400\\" supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/statusCode: number"`;

exports[`Endevor responses type parsing Endevor error response type parsing should throw an error for a response without messages 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/messages: Array<string>"`;

exports[`Endevor responses type parsing Endevor error response type parsing should throw an error for a response without return code 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor error response type parsing should throw an error for a response without status code 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/statusCode: number"`;

exports[`Endevor responses type parsing Endevor print element and listing response type parsing should parse a proper response 1`] = `
Object {
  "body": Object {
    "data": Array [
      "very important content",
    ],
    "messages": Array [],
    "returnCode": 0,
    "statusCode": 200,
  },
}
`;

exports[`Endevor responses type parsing Endevor print element and listing response type parsing should throw an error for a response with incorrect data 1`] = `
"Invalid value {\\"firstParagraph\\":\\"blah\\",\\"secondParagraph\\":\\"blahblah\\"} supplied to : { body: { statusCode: number, returnCode: ReturnCode, data: Array<string>, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, data: Array<string>, messages: Array<string> }/data: Array<string>/0: string
Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, data: Array<string>, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, data: Array<string>, messages: Array<string> }/messages: Array<string>"
`;

exports[`Endevor responses type parsing Endevor print element and listing response type parsing should throw an error for a response without data 1`] = `
"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, data: Array<string>, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, data: Array<string>, messages: Array<string> }/data: Array<string>
Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, data: Array<string>, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, data: Array<string>, messages: Array<string> }/messages: Array<string>"
`;

exports[`Endevor responses type parsing Endevor retrieve element response type parsing should parse a proper response 1`] = `
Object {
  "body": Object {
    "data": Array [
      Object {
        "data": Array [
          118,
          101,
          114,
          121,
          32,
          105,
          109,
          112,
          111,
          114,
          116,
          97,
          110,
          116,
          32,
          99,
          111,
          110,
          116,
          101,
          110,
          116,
        ],
        "type": "Buffer",
      },
    ],
    "returnCode": 0,
    "statusCode": 200,
  },
  "headers": Object {
    "fingerprint": "fingerprint",
  },
}
`;

exports[`Endevor responses type parsing Endevor retrieve element response type parsing should throw an error for a response with incorrect data 1`] = `"Invalid value {\\"firstParagraph\\":\\"blah\\",\\"secondParagraph\\":\\"blahblah\\"} supplied to : { body: { statusCode: number, returnCode: ReturnCode, data: Array<Buffer> }, headers: { fingerprint: string } }/body: { statusCode: number, returnCode: ReturnCode, data: Array<Buffer> }/data: Array<Buffer>/0: Buffer"`;

exports[`Endevor responses type parsing Endevor retrieve element response type parsing should throw an error for a response without data 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, data: Array<Buffer> }, headers: { fingerprint: string } }/body: { statusCode: number, returnCode: ReturnCode, data: Array<Buffer> }/data: Array<Buffer>"`;

exports[`Endevor responses type parsing Endevor retrieve element response type parsing should throw an error for a response without fingerprint 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, data: Array<Buffer> }, headers: { fingerprint: string } }/headers: { fingerprint: string }/fingerprint: string"`;

exports[`Endevor responses type parsing Endevor subsystems response type parsing should parse a response with any subsystems 1`] = `
Object {
  "body": Object {
    "data": Array [
      Object {
        "whaaat": "whaaaat???",
      },
      Object {
        "whatttttt": "whattttt??",
      },
      Object {
        "envName": "test",
        "sbsName": "test-subsys",
        "stgSeqNum": 1,
        "sysName": "test-sys",
      },
    ],
    "statusCode": 200,
  },
}
`;

exports[`Endevor responses type parsing Endevor subsystems response type parsing should throw an error for a response without subsystems 1`] = `"Invalid value null supplied to : { body: { statusCode: number, data: Array<unknown> } }/body: { statusCode: number, data: Array<unknown> }/data: Array<unknown>"`;

exports[`Endevor responses type parsing Endevor systems response type parsing should parse a response with any systems 1`] = `
Object {
  "body": Object {
    "data": Array [
      Object {
        "whaaat": "whaaaat???",
      },
      Object {
        "whatttttt": "whattttt??",
      },
      Object {
        "envName": "test",
        "stgSeqNum": 1,
        "sysName": "test-sys",
      },
    ],
    "statusCode": 200,
  },
}
`;

exports[`Endevor responses type parsing Endevor systems response type parsing should throw an error for a response without systems 1`] = `"Invalid value null supplied to : { body: { statusCode: number, data: Array<unknown> } }/body: { statusCode: number, data: Array<unknown> }/data: Array<unknown>"`;

exports[`Endevor responses type parsing Endevor update and generate response type parsing should parse a proper response 1`] = `
Object {
  "body": Object {
    "messages": Array [
      "Relax, everything will be fine!",
    ],
    "returnCode": 0,
    "statusCode": 200,
  },
}
`;

exports[`Endevor responses type parsing Endevor update and generate response type parsing should throw an error for a response with incorrect messages 1`] = `"Invalid value {\\"messageValue\\":\\"Relax, everything will be fine!\\"} supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/messages: Array<string>"`;

exports[`Endevor responses type parsing Endevor update and generate response type parsing should throw an error for a response with incorrect return code 1`] = `"Invalid value \\"8\\" supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor update and generate response type parsing should throw an error for a response with incorrect status code 1`] = `"Invalid value \\"400\\" supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/statusCode: number"`;

exports[`Endevor responses type parsing Endevor update and generate response type parsing should throw an error for a response without messages 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/messages: Array<string>"`;

exports[`Endevor responses type parsing Endevor update and generate response type parsing should throw an error for a response without return code 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/returnCode: ReturnCode"`;

exports[`Endevor responses type parsing Endevor update and generate response type parsing should throw an error for a response without status code 1`] = `"Invalid value undefined supplied to : { body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> } }/body: { statusCode: number, returnCode: ReturnCode, messages: Array<string> }/statusCode: number"`;
